--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,6 @@ li {
   padding: 2rem 2rem;
   display: flex;
   justify-content: center;
-  /*  align-items: center; */
   position: relative;
 }
 a {
@@ -238,8 +237,8 @@ a {
   align-items: center;
 }
 .laptop {
-  width: 50rem;
-  height: 60rem;
+  /*   width: 50rem;
+  height: 60rem; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -248,10 +247,10 @@ a {
 }
 .display,
 .keyboard-wrap {
-  width: 35rem;
+  width: 43rem;
 }
 .display {
-  height: 24rem;
+  height: 28rem;
   background: #222121;
   border-radius: 10px;
   transform-origin: bottom;
@@ -286,7 +285,7 @@ a {
       Keyboard design
 ------------------------*/
 .keyboard-wrap {
-  height: 22rem;
+  height: 23rem;
   border-radius: 10px;
   transform: perspective(880px) rotateX(40deg);
   transform-origin: 50% 0;
@@ -332,10 +331,12 @@ a {
   width: 100%;
   height: 100%;
 }
-
+.keys {
+  margin-bottom: 1rem;
+}
 .track-pad {
-  width: 12rem;
-  height: 150px;
+  width: 18rem;
+  height: 15rem;
   margin: 0 auto;
   border-radius: 2px 2px 4px 4px;
   opacity: 0.5;
@@ -387,7 +388,7 @@ a {
   background: var(--bg);
   box-shadow: var(--btn-shadow);
   border-radius: 5px;
-  padding: 20px;
+  padding: 1.5rem;
   border-bottom: 2px solid var(--red-pink);
   display: flex;
   justify-content: center;
@@ -408,7 +409,7 @@ a {
 }
 
 .card .features-list {
-  width: 70%;
+  width: 80%;
 }
 
 .card h3 {
@@ -542,7 +543,7 @@ textarea {
             Responsive 
 -----------------------------------*/
 
-/* For 1024px */
+/* For 1024px and less */
 @media all and (max-width: 1024px) and (orientation: portrait) {
   .wrapper i:first-child {
     left: 0px;
@@ -557,11 +558,11 @@ textarea {
   }
 
   .hero-section {
-    padding: 1rem 2rem;
+    padding: 1rem 3rem;
   }
 }
 
-/* For tablet devices   */
+/* For tablet devices  */
 
 @media screen and (max-width: 896px) and (orientation: portrait) {
   html {
@@ -600,7 +601,6 @@ textarea {
     gap: 2rem;
   }
 }
-
 @media screen and (max-width: 678px) and (orientation: portrait) {
   .laptop {
     transform: scale(0.7);
@@ -615,6 +615,7 @@ textarea {
     height: 60vh;
   }
 }
+/* for L-mobile devices : 425px */
 @media screen and (max-width: 428px) and (orientation: portrait) {
   html {
     font-size: 50%;
@@ -772,6 +773,16 @@ textarea {
   color: #555;
 }
 
+/* for landscape view */
+@media screen and (min-width: 320) and (max-width: 640px),
+  (min-device-width: 320) and (max-device-width: 640px) and (orientation: landscape) {
+  .laptop {
+    transform: scale(0.7);
+  }
+  .flex {
+    flex-direction: column;
+  }
+}
 /* Additional CSS for the copyright section */
 
 footer .copyright-section {
